--- a/templates/Sequencia_Lote.html
+++ b/templates/Sequencia_Lote.html
@@ -30,7 +30,7 @@
 <div class="w-100" style="padding-top: 0px !important;">
     <div class="w-100"> 
         <div class="container">
-            <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
+            <a href="{{url_for('index_config')}}" type="button" class="btn btn-success ms-2">Voltar</a>
             <button type="button" class="btn btn-info ms-1" data-bs-toggle="modal" data-bs-target="#alterarSequenciaOpModal" data-tabela_campo="{{ sequencia_op.tabela_campo }}" data-valor="{{ sequencia_op.valor }}" data-valor_anterior="{{ sequencia_op.valor_anterior }}">Sequência da Ops</button>
         </div>
         <h2 class="d-flex justify-content-center mt-2"><strong>Sequências de Lote e OP</strong></h2>
